--- a/refer.html
+++ b/refer.html
@@ -16,6 +16,27 @@
 		</div>
 		<section class="main-container">
 			<section class="roles-container">
+				<div style="position:absolute ;left: 25%;bottom: 200px; font-size: 25px; text-shadow: 2px 2px 5px red;">
+					<p style="line-height: 120px; font-size: 40px;">參考資料</p>
+					<a href="https://zh.wikipedia.org/zh-tw/Wiki">
+						<p style="line-height: 90px;">Wiki</p>
+					</a>
+					<a href="https://www.fate-go.com.tw/event_ln6/index.html">
+						<p style="line-height: 90px;">Fate/Grand Order 官網</p>
+					</a>
+					<a href="https://pixelmap.amcharts.com/">
+						<p style="line-height: 90px;">Pixel Map Generator</p>
+					</a>
+					<a href="https://www.wallpaperflare.com/">
+						<p style="line-height: 90px;">Wallpaper Flare</p>
+					</a>
+					<a href="https://www.processon.com/">
+						<p style="line-height: 90px;">Process On</p>
+					</a>
+					<a href="https://www.w3schools.com/">
+						<p style="line-height: 90px;">W3Schools Online Web Tutorials</p>
+					</a>
+				</div>
 			</section>
 		</section>
 		<div id="footer">
