--- a/inter-own.html
+++ b/inter-own.html
@@ -44,7 +44,7 @@
 							  </div>
 							  
 							  <div class="mySlides">
-							    <img src="assets/images/saber-3.png" style="width:100%">
+							    <img src="assets/images/relation1.png" style="width:100%">
 							  </div>
 
 							  <a class="arr left-arr" onclick="plusSlides(-1)"></a>
@@ -62,7 +62,7 @@
 							      <img class="demo cursor" src="assets/images/god-1-1.png" style="width:100%" onclick="currentSlide(2)" alt="主要人物">
 							    </div>
 							    <div class="column">
-							      <img class="demo cursor" src="assets/images/saber-3.png" style="width:100%" onclick="currentSlide(3)" alt="人物關係圖">
+							      <img class="demo cursor" src="assets/images/relation1.png" style="width:100%" onclick="currentSlide(3)" alt="人物關係圖">
 							    </div>
 					  		  </div>				  
 					</div>
