--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="content">
 					<div class="tit"></div>
 					<div class="tag"></div>
-					<div class="roles-wrap">
+					<div class="roles-wrap" onclick="location.href='inter-own.html';">
 						<div class="roles show">
 							<div class="role-item saber">
 								<div class="off">
